@@ -211,11 +211,6 @@ specifier|final
 name|String
 name|field
 decl_stmt|;
-DECL|field|planetModel
-specifier|final
-name|PlanetModel
-name|planetModel
-decl_stmt|;
 DECL|field|shape
 specifier|final
 name|GeoShape
@@ -226,9 +221,6 @@ DECL|method|PointInGeo3DShapeQuery
 specifier|public
 name|PointInGeo3DShapeQuery
 parameter_list|(
-name|PlanetModel
-name|planetModel
-parameter_list|,
 name|String
 name|field
 parameter_list|,
@@ -244,16 +236,56 @@ name|field
 expr_stmt|;
 name|this
 operator|.
-name|planetModel
+name|shape
 operator|=
-name|planetModel
+name|shape
 expr_stmt|;
-name|this
+if|if
+condition|(
+name|shape
+operator|instanceof
+name|BasePlanetObject
+condition|)
+block|{
+name|BasePlanetObject
+name|planetObject
+init|=
+operator|(
+name|BasePlanetObject
+operator|)
+name|shape
+decl_stmt|;
+if|if
+condition|(
+name|planetObject
 operator|.
-name|shape
-operator|=
-name|shape
-expr_stmt|;
+name|getPlanetModel
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|PlanetModel
+operator|.
+name|WGS84
+argument_list|)
+operator|==
+literal|false
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"this qurey requires PlanetModel.WGS84, but got: "
+operator|+
+name|planetObject
+operator|.
+name|getPlanetModel
+argument_list|()
+argument_list|)
+throw|;
+block|}
+block|}
 block|}
 annotation|@
 name|Override
@@ -324,7 +356,9 @@ comment|/*         GeoArea xyzSolid = GeoAreaFactory.makeGeoArea(planetModel,   
 name|double
 name|planetMax
 init|=
-name|planetModel
+name|PlanetModel
+operator|.
+name|WGS84
 operator|.
 name|getMaximumMagnitude
 argument_list|()
@@ -397,8 +431,6 @@ name|Geo3DPoint
 operator|.
 name|decodeDimension
 argument_list|(
-name|planetModel
-argument_list|,
 name|packedValue
 argument_list|,
 literal|0
@@ -411,8 +443,6 @@ name|Geo3DPoint
 operator|.
 name|decodeDimension
 argument_list|(
-name|planetModel
-argument_list|,
 name|packedValue
 argument_list|,
 name|Integer
@@ -427,8 +457,6 @@ name|Geo3DPoint
 operator|.
 name|decodeDimension
 argument_list|(
-name|planetModel
-argument_list|,
 name|packedValue
 argument_list|,
 literal|2
@@ -633,7 +661,9 @@ name|GeoAreaFactory
 operator|.
 name|makeGeoArea
 argument_list|(
-name|planetModel
+name|PlanetModel
+operator|.
+name|WGS84
 argument_list|,
 name|xMin
 argument_list|,
@@ -753,16 +783,6 @@ return|return
 name|field
 return|;
 block|}
-DECL|method|getPlanetModel
-specifier|public
-name|PlanetModel
-name|getPlanetModel
-parameter_list|()
-block|{
-return|return
-name|planetModel
-return|;
-block|}
 DECL|method|getShape
 specifier|public
 name|GeoShape
@@ -841,15 +861,6 @@ operator|)
 name|o
 decl_stmt|;
 return|return
-name|planetModel
-operator|.
-name|equals
-argument_list|(
-name|that
-operator|.
-name|planetModel
-argument_list|)
-operator|&&
 name|shape
 operator|.
 name|equals
@@ -877,17 +888,6 @@ operator|.
 name|hashCode
 argument_list|()
 decl_stmt|;
-name|result
-operator|=
-literal|31
-operator|*
-name|result
-operator|+
-name|planetModel
-operator|.
-name|hashCode
-argument_list|()
-expr_stmt|;
 name|result
 operator|=
 literal|31
@@ -978,20 +978,6 @@ literal|':'
 argument_list|)
 expr_stmt|;
 block|}
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|" PlanetModel: "
-argument_list|)
-expr_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-name|planetModel
-argument_list|)
-expr_stmt|;
 name|sb
 operator|.
 name|append
