@@ -125,6 +125,9 @@ API Changes
 * LUCENE-7064: MultiPhraseQuery is now immutable and should be constructed
   with MultiPhraseQuery.Builder. (Luc Vanlerberghe via Adrien Grand)
 
+* LUCENE-7072: Geo3DPoint always uses WGS84 planet model.
+  (Robert Muir, Mike McCandless)
+
 Optimizations
 
 * LUCENE-6891: Use prefix coding when writing points in 
